--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "async": "~0.2.9",
     "underscore.string": "~2.3.3",
     "jade-browser": "0.0.13",
-    "moment": "~2.1.0"
+    "moment": "~2.1.0",
+    "mongoose": "~3.8.1"
+  },
+  "devDependencies": {
+    "chai": "~1.8.1"
   }
 }
